fix style.css layout issues

--- a/style.css
+++ b/style.css
@@ -4,16 +4,21 @@
     gap: 0.5rem;
     justify-content: center;
 }
+body{
+    align-content: center;
+    font-family: sans-serif;
+    margin-right: auto;
+}
 
 .mobile-button-wide {
     flex: 1 1 30%;
     min-width: 80px;
     min-height: 60px;
     height: 15%;
-    width: 100%;
+    width: 98%;
+    margin-right: 1%;
     margin-bottom: 2cqw;
     font-size: 1.2rem;
-    border-radius: 8px;
     border: none;
     background-color: #ffbaba;
     color: #000000;
@@ -23,17 +28,18 @@
 .mobile-button {
     flex: 1 1 30%;
     min-width: 80px;
-    width: auto;
-    margin-right: 5px;
+    width: 99%;
+    align-items: center;
     min-height: 100;
     margin-bottom: 5px;
-    font-size: 1.2rem;
+    margin-right: 1%;
+    font-size: 1rem;
     border-radius: 8px;
     border: none;
     background-color: #badcff;
     color: #000000;
     border-radius: 20px;
-    font-family:sans-serif
+    font-family:sans-serif;
 }
 
 .mobile-button:active {
